# BREW_AppUI

./: AppBkup.c  AppBkup.h  AppInst.c  AppInst.h  AppUI.bid  AppUI.c  AppUI.h  AppUI.mfx  AppUI.mif  AppUI_mif.c  CMakeLists.txt  FileBrowser.c  FileBrowser.h  LICENSE  MZFileUtils.c  MZFileUtils.h  Menu.c  Menu.h
miniz/: miniz.h
